--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
     <div id="root"></div>
